updated form button

--- a/templates/index.jinja
+++ b/templates/index.jinja
@@ -23,8 +23,7 @@
     {% endfor %}
 </div>
 
-{# add a pet here #}
-<form action="/TBD">
+<form action="/add">
     <button>Add a Pet</button>
 </form>
 
