--- a/templates/add_pet_form.jinja
+++ b/templates/add_pet_form.jinja
@@ -9,23 +9,7 @@
 {% block content %}
 
 <form id="pet-add-form" method="POST">
-  {{ form.hidden_tag() }} <!--add type=hidden form fields -->
-
-  {% for field in form
-         if field.widget.input_type != 'hidden' %}
-
-    <p>
-      {{ field.label }}
-      {{ field }}
-
-      {% for error in field.errors %}
-        {{ error }}
-      {% endfor %}
-    </p>
-
-  {% endfor %}
-
-  <button type="submit">Submit</button>
+  {% include '_form.jinja' %}
 </form>
 
 {% endblock %}
