--- a/templates/edit_pet_form.jinja
+++ b/templates/edit_pet_form.jinja
@@ -16,23 +16,7 @@
 </div>
 
 <form id="pet-edit-form" method="POST">
-  {{ form.hidden_tag() }} <!--add type=hidden form fields -->
-
-  {% for field in form
-         if field.widget.input_type != 'hidden' %}
-
-    <p>
-      {{ field.label }}
-      {{ field }}
-
-      {% for error in field.errors %}
-        {{ error }}
-      {% endfor %}
-    </p>
-
-  {% endfor %}
-
-  <button type="submit">Submit</button>
+  {% include '_form.jinja' %}
 </form>
 
 {% endblock %}
